# Crosspipe

./: .gitignore  README.md  build-bundle.sh  io.github.dp0sk.Crosspipe.yml  meson.build
data/: io.github.dp0sk.Crosspipe.desktop  io.github.dp0sk.Crosspipe.gschema.xml  io.github.dp0sk.Crosspipe.metainfo.xml  meson.build
src/: Application.vala  Window.vala  config.vala.in
src/backend/: Backend.vala  PipeWireBackend.vala  pipewire_wrapper.c  pipewire_wrapper.h
src/canvas/: Canvas.vala  CanvasItem.vala  Connection.vala  Node.vala  Port.vala
src/commands/: Command.vala
src/vapi/: gpw.vapi  libpipewire-0.3.vapi
