# Data files
install_data(
  'io.github.dp0sk.Crosspipe.desktop',
  install_dir: get_option('datadir') / 'applications'
)

install_data(
  'io.github.dp0sk.Crosspipe.metainfo.xml',
  install_dir: get_option('datadir') / 'metainfo'
)

install_data(
  'io.github.dp0sk.Crosspipe.gschema.xml',
  install_dir: get_option('datadir') / 'glib-2.0' / 'schemas'
)

# Icons
install_subdir(
  'icons',
  install_dir: get_option('datadir')
)
